# MultiServices-AI

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  PRIVACY.md  README.fr.md  README.md  pyproject.toml  requirements.txt
deploy/: Dockerfile.ingest  Dockerfile.mem  Dockerfile.webapi  README.md  SETUP-POSTE-CLIENT.md  api-mem.example.com.nginx  api-mem.woutils.com.nginx  docker-run-ingest.sh  docker-run-mem.sh  docker-run-webapi.sh  gen-mtls.sh  gen-webapi-token.sh  mem.example.com.nginx  mem.woutils.com.nginx
docs/: CAPTURE-CONVENTION.md  DATA-MODEL-ACTOR-SCOPE-USAGE.md  ENCRYPTION-AT-REST.md  INTEGRATION.md  JOURNALING-PROTOCOL.md  MULTISERVICE-AI-CONCEPTION.md  MULTISERVICE-AI-FEUILLE-DE-ROUTE.md  MULTISERVICE-AI-VISION.md  PRESENTATION.md  SCALING-PROJECTIONS.md
docs/curation/: PLAN.md  README.md
docs/superpowers/plans/: 2026-06-22-ingest-distant.md  2026-06-22-serveur-memoire-central.md  2026-06-22-webapi-rest.md  2026-07-02-curation-memoire.md
docs/superpowers/specs/: 2026-06-22-ingest-distant-design.md  2026-06-22-serveur-memoire-central-design.md  2026-06-22-webapi-rest-design.md  2026-07-02-curation-memoire-design.md  2026-07-06-curation-comparateur-llm-design.md
examples/memory_demo/: README.md  arcade.html  compare.py  seed_demo.py
multiservice/: __init__.py  agent.py  backends.py  backup.py  cache.py  chat.py  comparator.py  compose.py  config.py  crypto.py  curation_inbox.py  curation_llm.py  curation_report.py  curator.py  economy.py  encrypt.py  envelope.py  erase.py  events.py  hygiene.py  index.py  ingest.py  ingest_server.py  inspect.py  integrity.py  journal.py  keyring.py  keystore.py  maintenance.py  mcp_server.py  memeval.py  memlog_http.py  memory.py  memory_tools.py  policy.py  preheat.py  procedural.py  project.py  projection.py  projlog.py  (+12 more)
scripts/: backup.ps1  chat.ps1  eve.Modelfile  git-commit-phase2.ps1  import_model.ps1  index.ps1  ingest-curation.ps1  inspect.ps1  install_backup.ps1  install_index.ps1  install_journal_replication.ps1  install_project_update.ps1  project_update.ps1  promote.ps1  replicate_journal.ps1  run_mcp.py  semcache_probe.ps1  skills.ps1  sync_memory_merge.ps1  sync_memory_to_vps.ps1  usage.ps1
tests/: test_agent_memory.py  test_backup_o1b.py  test_cache_s16.py  test_capture_s13.py  test_chat_correct.py  test_chat_model.py  test_chat_note.py  test_chat_recall.py  test_chat_recall_hybrid.py  test_chat_routing.py  test_chat_s13.py  test_chat_semcache.py  test_cloud_tools_sovereignty.py  test_comparator.py  test_compose_s16.py  test_crypto_p0.py  test_curation_closes.py  test_curation_inbox.py  test_curation_llm.py  test_curation_report.py  test_curator.py  test_economy_s15.py  test_encryption_p0.py  test_envelope_p0.py  test_gguf_tools.py  test_health.py  test_hygiene.py  test_index_status.py  test_ingest.py  test_ingest_server.py  test_inspect_s15.py  test_integrity.py  test_journal_concurrency.py  test_lessons.py  test_maintenance.py  test_mcp_http.py  test_memeval.py  test_memlog_http.py  test_memory_s14.py  test_memory_tools.py  (+33 more)
video/: README.md  package.json  tsconfig.json
video/src/: License.tsx  Root.tsx  Video.tsx
