[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "multiservice-ia"
description = "A sovereign, local-first, bi-temporal memory substrate for LLMs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "MultiService IA authors" }]
keywords = ["llm", "memory", "agent-memory", "mcp", "ollama", "event-sourcing",
            "bi-temporal", "local-first", "rag", "semantic-search"]
dynamic = ["version"]
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]            # serveur MCP lecture seule (python -m multiservice.mcp_server)
gguf = ["llama-cpp-python"]   # backend EmbeddedGGUF (wheel selon CPU/CUDA, cf. requirements.txt)
dev = ["pytest>=8.0"]
ingest = ["starlette>=0.40", "uvicorn>=0.30", "httpx>=0.27"]   # serveur + client d'ingest distant
webapi = ["fastapi>=0.115", "uvicorn>=0.30"]   # API REST web (LLM web), central-only

# Capture : disponible PARTOUT apres `pip install -e .` -> tout projet peut alimenter
# la memoire partagee (ecriture hors MCP, source-namespacee, cf. D5).
[project.scripts]
projlog = "multiservice.projlog:main"
multiservice-mcp = "multiservice.mcp_server:main"   # commande sans flag -> evite le bug "-m" de claude mcp add
multiservice-mcp-http = "multiservice.mcp_server:main_http"   # surface HTTP lecture seule (conteneur)
multiservice-ingest = "multiservice.ingest_server:main"        # serveur HTTP d'ingest (conteneur)
memlog-http = "multiservice.memlog_http:main"                  # client d'ecriture distante (Task 3)
multiservice-webapi = "multiservice.webapi_server:main"        # API REST web (conteneur mem-api)

[project.urls]
Homepage = "https://github.com/wilf974/MultiServices-AI"
Repository = "https://github.com/wilf974/MultiServices-AI"

[tool.setuptools]
packages = ["multiservice"]

[tool.setuptools.dynamic]
version = { attr = "multiservice.__version__" }

# La suite du PROJET vit dans tests/ ; reference/ (copie compagnon AetherCore) a ses propres
# tests non collectables ici (ModuleNotFoundError + collision test_sync.py, observe 02/07/2026).
[tool.pytest.ini_options]
testpaths = ["tests"]
# defauts pytest conserves (".*" couvre .git/.venv/.superpowers) + exclusions projet
norecursedirs = [".*", "build", "dist", "venv", "node_modules", "*.egg",
                 "reference", "examples", "video"]
